# py-vendor

./: CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-on-pypi.yaml  publish-on-testpypi.yaml
docs/source/: conf.py  examples.rst  index.rst  installation.rst
src/py_vendor/: __main__.py  console.py  run.py
tests/: test_py_vendor.py
