[tool.poetry]
name = "py-vendor"
version = "0.1.0"
description = "Easily vendor code into your project"
authors = ["Stanislav Schmidt <stanislav.schmidt@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-vendor = "py_vendor.console:main"
