[tool.poetry]
name = "py-vendor"
version = "0.1.2"
description = "Easy, configurable, and reproducible code vendors"
license = "MIT"
authors = ["Stanislav Schmidt <stanislav.schmidt@outlook.com>"]
maintainers = ["Stanislav Schmidt <stanislav.schmidt@outlook.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/py-vendor"
repository = "https://github.com/Stannislav/py-vendor"
documentation = "https://pypi.org/project/py-vendor"
keywords = ["vendor", "open-source"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.4"
Sphinx = "^4.2.0"
furo = "^2021.10.9"

[tool.poetry.scripts]
py-vendor = "py_vendor.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
